unpackaged/main/default/objects/litify_pm__Resolution__c/litify_pm__Resolution__c.object-meta.xml
<CustomObject>
    <label>Resolution</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Resolution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>