unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Amount_Due_To_Client_Not_Paid_Yet__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_To_Client_Not_Paid_Yet__c</fullName>
    <formula>litify_pm__Amount_Due_to_Client__c - Amount_Due_to_Client_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due To Client (Not Paid Yet)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>