unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Amount_Due_to_Client_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_to_Client_Paid__c</fullName>
    <label>Amount Due to Client (Paid)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>