unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Fees_Due_to_Others_Not_Paid_Yet__c.field-meta.xml
<CustomField>
    <fullName>Fees_Due_to_Others_Not_Paid_Yet__c</fullName>
    <formula>litify_pm__Fees_Due_to_Others__c - Fees_Due_to_Others_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fees Due to Others (Not Paid Yet)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>