unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Fees_Due_to_Others_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Due_to_Others_Paid__c</fullName>
    <label>Fees Due to Others (Paid)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>