unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Internal_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Internal_Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resolutions (Internal Law Firm)</relationshipLabel>
    <relationshipName>Resolutions</relationshipName>
    <type>Lookup</type>
</CustomField>