unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Amount_Due_to_Client__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Amount_Due_to_Client__c</fullName>
    <label>Amount Due to Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>