unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Attorney_Credited__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Attorney_Credited__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney Credited</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LitifyResolutions</relationshipName>
    <type>Lookup</type>
</CustomField>