unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Days_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Days_to_Resolve__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(litify_pm__Matter__c)),
NOT(ISBLANK(litify_pm__Matter__r.litify_pm__Open_Date__c)),
NOT(ISBLANK(litify_pm__Resolution_Date__c))),

litify_pm__Resolution_Date__c-litify_pm__Matter__r.litify_pm__Open_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>