unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Fees_Due_to_Others__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Fees_Due_to_Others__c</fullName>
    <label>Fees Due to Others</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>