unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Gross_Attorney_Fee__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Gross_Attorney_Fee__c</fullName>
    <label>Gross Attorney Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>