unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__lit_Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Referral_Amount__c</fullName>
    <description>Total amount of all Resolution Splits with type Referral</description>
    <label>Referral Amount</label>
    <summarizedField>litify_pm__Resolution_Split__c.litify_pm__lit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>litify_pm__Resolution_Split__c.litify_pm__lit_Type__c</field>
        <operation>equals</operation>
        <value>Referral</value>
    </summaryFilterItems>
    <summaryForeignKey>litify_pm__Resolution_Split__c.litify_pm__lit_Resolution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>