unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Negotiation__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Negotiation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>litify_pm__Negotiation__c.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <valueField>$Source.litify_pm__Matter__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Negotiation__c</referenceTo>
    <relationshipLabel>Resolutions</relationshipLabel>
    <relationshipName>LitifyResolutions</relationshipName>
    <type>Lookup</type>
</CustomField>