unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Payor__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resolutions (Payor)</relationshipLabel>
    <relationshipName>LitifyResolutionsPayor</relationshipName>
    <type>Lookup</type>
</CustomField>