unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Payor_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Payor_Type__c</fullName>
    <label>Payor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Third-Party Administrator (TPA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>