unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Reason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_pm__Resolution_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Calls not being returned</fullName>
            </value>
            <value>
                <fullName>Cannot locate defendant</fullName>
            </value>
            <value>
                <fullName>Client did not treat</fullName>
            </value>
            <value>
                <fullName>Client missing</fullName>
            </value>
            <value>
                <fullName>Client Paid Correctly</fullName>
            </value>
            <value>
                <fullName>Client unavailable or deceased</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest</fullName>
            </value>
            <value>
                <fullName>Decided not to pursue claim</fullName>
            </value>
            <value>
                <fullName>Decided to accept prior offer</fullName>
            </value>
            <value>
                <fullName>Defendant did not respond</fullName>
            </value>
            <value>
                <fullName>Did not wish to treat</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with handling of case</fullName>
            </value>
            <value>
                <fullName>Employees not polite</fullName>
            </value>
            <value>
                <fullName>Firm Withdrew from case</fullName>
            </value>
            <value>
                <fullName>Injuries too minor or unrelated</fullName>
            </value>
            <value>
                <fullName>Liability issues</fullName>
            </value>
            <value>
                <fullName>Low offer</fullName>
            </value>
            <value>
                <fullName>Negative review of medical records</fullName>
            </value>
            <value>
                <fullName>No insurance or assets</fullName>
            </value>
            <value>
                <fullName>Not in Ref Atty County (PIP cases)</fullName>
            </value>
            <value>
                <fullName>Not notified of change of assistant</fullName>
            </value>
            <value>
                <fullName>Offer too low</fullName>
            </value>
            <value>
                <fullName>PIP benefits exhausted (PIP cases)</fullName>
            </value>
            <value>
                <fullName>PIP claim already filed (PIP cases)</fullName>
            </value>
            <value>
                <fullName>Property damage not resolved</fullName>
            </value>
            <value>
                <fullName>Reasons unrelated to firm/case</fullName>
            </value>
            <value>
                <fullName>Too difficult to speak to attorney</fullName>
            </value>
            <value>
                <fullName>Uncooperative client</fullName>
            </value>
            <value>
                <fullName>Upset that case is being referred.</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>