unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Resolution_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>