unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Defendant Verdict – No Appeal</fullName>
            </value>
            <value>
                <fullName>Directed Verdict for Defendant</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
            <value>
                <fullName>Dismissed for Fraud</fullName>
            </value>
            <value>
                <fullName>Fired</fullName>
            </value>
            <value>
                <fullName>Jury Verdict</fullName>
            </value>
            <value>
                <fullName>Lost Appeal</fullName>
            </value>
            <value>
                <fullName>Low Verdict – Client Owes D’s Fees/Costs</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>MSJ Appeal Lost</fullName>
            </value>
            <value>
                <fullName>MSJ Lost – No Appeal</fullName>
            </value>
            <value>
                <fullName>Negotiation - Filed Suit</fullName>
            </value>
            <value>
                <fullName>Negotiation - Not Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>