unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Resolved_by__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Resolved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LitifyResolutionsResolvedBy</relationshipName>
    <type>Lookup</type>
</CustomField>