unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Settlement_Verdict_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Settlement_Verdict_Amount__c</fullName>
    <label>Settlement/Verdict Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>