unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_pm__Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>