unpackaged/main/default/objects/litify_pm__Resolution__c/fields/litify_tso_Payor_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Payor_Name__c</fullName>
    <description>Formula to capture name of Payor Party. Used in Related List on Matters.</description>
    <formula>litify_pm__Payor__r.Name</formula>
    <label>Payor Name</label>
    <type>Text</type>
</CustomField>