unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Net_Attorney_Fee_Not_Paid_Yet__c.field-meta.xml
<CustomField>
    <fullName>Net_Attorney_Fee_Not_Paid_Yet__c</fullName>
    <formula>litify_pm__Net_Attorney_Fee__c - Net_Attorney_Fee_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Attorney Fee (Not Paid Yet)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>