unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Net_Attorney_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Net_Attorney_Fee_Paid__c</fullName>
    <label>Net Attorney Fee (Paid)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>