unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resolutions (Referral Partner)</relationshipLabel>
    <relationshipName>Resolutions1</relationshipName>
    <type>Lookup</type>
</CustomField>