unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Settlement_Verdict_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Verdict_Amount_Due__c</fullName>
    <formula>litify_pm__Settlement_Verdict_Amount__c - Settlement_Verdict_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement/Verdict Amount (Due)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>