unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Settlement_Verdict_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Verdict_Amount_Received__c</fullName>
    <label>Settlement/Verdict Amount (Received)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>