unpackaged/main/default/objects/litify_pm__Resolution__c/fields/Settlement_Verdict_Amount_Received_Bool__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Verdict_Amount_Received_Bool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox to indicate that the settlement verdict amount has been received. For example when entering a resolution after you have already received a check. This will mark down the deposit in the ledger.</description>
    <inlineHelpText>Check this checkbox to indicate that the settlement verdict amount has been received. For example when entering a resolution after you have already received a check. This will mark down the deposit in the ledger.</inlineHelpText>
    <label>Settlement/Verdict Amount Was Received</label>
    <type>Checkbox</type>
</CustomField>