unpackaged/main/default/objects/litify_pm__Resolution__c/recordTypes/litify_pm__Resolution.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Resolution</fullName>
    <active>true</active>
    <label>Resolution</label>
</RecordType>